# marvbot.rs

./: .gitignore  Cargo.toml  Makefile  Marv.toml  README.md  acme.txt  compose.yaml  diesel.toml  messages.txt
marv-core/: .env  Cargo.toml  diesel.toml
marv-core/src/marv/: plugins.rs
marv-core/src/marv/plugins/: todo.rs
marv-core/src/marv/plugins/core/: channel.rs
marv_api/: Cargo.toml
marv_api/src/: lib.rs  marv_api.rs
marv_api/src/marv_api/: config.rs  plugins.rs
marv_core/: Cargo.toml
marv_core/src/: main.rs  marv.rs
marv_core/src/marv/: engine.rs  plugins.rs
marv_core/src/marv/plugins/: core.rs  dispatch.rs  scheduled.rs
marv_core/src/marv/plugins/core/: channel.rs  hello.rs  hello_fast.rs  hello_slow.rs  log.rs  login.rs  pong.rs  spam.rs
marv_core/src/marv/plugins/kafka/: consumer.rs  producer.rs
marv_core/src/marv/plugins/todo/: adapter.rs  repository.rs
marv_plugins/: Cargo.toml  diesel.toml
marv_plugins/src/: lib.rs  marv_plugins.rs
marv_plugins/src/marv_plugins/: ask_chatgpt.rs  todo.rs
marv_plugins/src/marv_plugins/kafka/: consumer.rs  producer.rs
marv_plugins/src/marv_plugins/todo/: adapter.rs  controller.rs  models.rs  repository.rs  service.rs
marv_plugins/src/marv_plugins/todo/migrations/2025-10-28-114609-0000_add_status_to_todos/: down.sql
migrations/2025-10-23-221449-0000_create_messages/: up.sql
migrations/2025-10-25-201328-0000_create_todos/: up.sql
migrations/2025-10-28-114609-0000_add_status_to_todos/: up.sql
src/: ferris.rs  guess_game.rs  main.rs  marv.rs  test.rs
src/marv/: config.rs  engine.rs  metrics.rs  models.rs  network.rs  plugins.rs  schema.rs
src/marv/engine/: event.rs  single.rs  threaded.rs
src/marv/network/: event.rs  mod.rs  single.rs  threaded.rs
src/marv/plugins/: core.rs  helper.rs  kafka.rs  mod.rs  plugins_test.rs  todo.rs
src/marv/plugins/core/: channel.rs  hello.rs  log.rs  login.rs  mod.rs  pong.rs
src/marv/plugins/etc/: consumer.rs  database.rs  mod.rs  producer.rs  todo.rs
src/marv/plugins/etc/todo/: adapter.rs  controller.rs  helper.rs  mod.rs  repository.rs  service.rs
src/marv/plugins/kafka/: consumer.rs  consumer_v2.rs  producer.rs
src/marv/plugins/todo/: controller.rs  mod.rs  repository.rs  service.rs
