[package]
name = "hello-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
ferris-says = "0.3.1"
kafka = "0.10.0"
lazy_static = "1.5.0"
log = "0.4.28"
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
rand = "0.9.2"
regex = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
