[package]
name = "marv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bb8 = "0.9.0"
cargo = "0.91.0"
diesel = { version = "2.3.2", features = ["postgres", "r2d2"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
ferris-says = "0.3.1"
lazy_static = "1.5.0"
log = "0.4.28"
once_cell = "1.21.3"
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
r2d2_postgres = "0.18.2"
rand = "0.9.2"
rdkafka = {version = "0.38.0"}
regex = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
toml = "0.9.8"
marv_api = { path = "../marv_api" }

